--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Tamir Bold</title>
-        <style>
-            img{
-                width: 200px;
-                border-radius: 500px;
-            }
-            p.username {
-                font-weight: bold;
-                font-size: 5ch;
-            }
-        </style>
-    </head>
-    <body>
-        <img src="images/IMG_6731.jpg" alt="">
-        <p class="username">Tamir Bold</p>
-    </body>
+  <head>
+    <title>Tamir Bold</title>
+    <style>
+      img {
+        width: 200px;
+        border-radius: 500px;
+      }
+      p.username {
+        font-weight: bold;
+        font-size: 5ch;
+      }
+    </style>
+  </head>
+  <body>
+    <img src="images/IMG_6731.jpg" alt="" />
+    <p class="username">Tamir Bold</p>
+    <p>Lab0</p>
+  </body>
 </html>
