--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="CS742 WAP">
+    <meta name="keywords" content="">
     <!--comment-->
     <title>Tamir Bold</title>
     <style>
@@ -12,11 +17,23 @@
         font-weight: bold;
         font-size: 5ch;
       }
+      .zuragfoot {
+        width: 2cm;
+        margin-left: 85%;
+        }
+    </style>
     </style>
   </head>
   <body>
     <img src="images/IMG_6731.jpg" alt="" />
     <p class="username">Tamir Bold</p>
-    <p>Lab0</p>
+    <ul>
+      <li><a href="/index.html">Lab0 - Home</a> </li>
+      <li><a href="/aboutMe.html">Lab1 - About Me</a></li>
+      <li><a href="/pie.html">Homework1 - Recipe webpage</a> </li>
+      <li><a href="/aboutMe.html">Lab1 - About Me</a></li>
+    </ul>
   </body>
+  <a href="http://validator.w3.org/check/referer">
+    <img class="zuragfoot" src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator" /></a>
 </html>
