--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <li><a href="/index.html">Lab0 - Home</a> </li>
       <li><a href="/aboutMe.html">Lab1 - About Me</a></li>
       <li><a href="/pie.html">Homework1 - Recipe webpage</a> </li>
-      <li><a href="/aboutMe.html">Lab1 - About Me</a></li>
+      <li><a href="/tmnt.html">Homework2 - Movie review</a></li>
     </ul>
   </body>
   <a href="http://validator.w3.org/check/referer">
