Added Grades exercise

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <li><a href="/aboutMe.html">Lab1 - About Me</a></li>
       <li><a href="/pie.html">Homework1 - Recipe webpage</a> </li>
       <li><a href="/tmnt.html">Homework2 - Movie review</a></li>
+      <li><a href="/Grades_exercise/grades_exercise.html">Grades exercise</a></li>
     </ul>
   </body>
   <a href="http://validator.w3.org/check/referer">
