--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <li><a href="/pie.html">Homework1 - Recipe webpage</a> </li>
       <li><a href="/tmnt.html">Homework2 - Movie review</a></li>
       <li><a href="/Grades_exercise/grades_exercise.html">Grades exercise</a></li>
+      <li><a href="/html_forms_lab/html_forms.html">Nerdluv Sign-up Page</a></li>
     </ul>
   </body>
   <a href="http://validator.w3.org/check/referer">
