--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <li><a href="/index.html">Lab0 - Home</a> </li>
       <li><a href="/aboutMe.html">Lab1 - About Me</a></li>
       <li><a href="/pie.html">Homework1 - Recipe webpage</a> </li>
-      <li><a href="/tmnt.html">Homework2 - Movie review</a></li>
+      <li><a href="/Movie_review/tmnt.html">Homework2 - Movie review</a></li>
       <li><a href="/Grades_exercise/grades_exercise.html">Grades exercise</a></li>
       <li><a href="/html_forms_lab/html_forms.html">Nerdluv Sign-up Page</a></li>
     </ul>
