--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
       <li><a href="/Movie_review/tmnt.html">Homework2 - Movie review</a></li>
       <li><a href="/Grades_exercise/grades_exercise.html">Grades exercise</a></li>
       <li><a href="/html_forms_lab/html_forms.html">Nerdluv Sign-up Page</a></li>
+      <li><a href="tipcal.html">Tip calculator</a></li>
+      <li><a href="/tasklist.html">Task list</a></li>
     </ul>
   </body>
   <a href="http://validator.w3.org/check/referer">
