Added decorated folder

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <li><a href="/html_forms_lab/html_forms.html">Nerdluv Sign-up Page</a></li>
       <li><a href="tipcal.html">Tip calculator</a></li>
       <li><a href="/tasklist.html">Task list</a></li>
+      <li><a href="/Decorated/decoratemytext.html">Task list</a></li>
     </ul>
   </body>
   <a href="http://validator.w3.org/check/referer">
