--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <li><a href="tipcal.html">Tip calculator</a></li>
       <li><a href="/tasklist.html">Task list</a></li>
       <li><a href="/Decorated/decoratemytext.html">Task list</a></li>
+      <li><a href="bankaccount.html">Task list</a></li>
     </ul>
   </body>
   <a href="http://validator.w3.org/check/referer">
