--- a/bankaccount.html
+++ b/bankaccount.html
@@ -61,7 +61,7 @@
   <body>
     <div>
       <fieldset>
-        <legend>BANK OF LKHAGVAZAYA</legend>
+        <legend>BANK OF TAMIR</legend>
         <div class="bank-part">
           <div class="part">
             <label for="">Account Name: </label>
