--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       <li><a href="/html_forms_lab/html_forms.html">Nerdluv Sign-up Page</a></li>
       <li><a href="tipcal.html">Tip calculator</a></li>
       <li><a href="/tasklist.html">Task list</a></li>
-      <li><a href="/Decorated/decoratemytext.html">Task list</a></li>
-      <li><a href="bankaccount.html">Task list</a></li>
+      <li><a href="/Decorated/decoratemytext.html">Decorate my text</a></li>
+      <li><a href="bankaccount.html">Bank account/a></li>
     </ul>
   </body>
   <a href="http://validator.w3.org/check/referer">
