--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <li><a href="tipcal.html">Tip calculator</a></li>
       <li><a href="/tasklist.html">Task list</a></li>
       <li><a href="/Decorated/decoratemytext.html">Decorate my text</a></li>
-      <li><a href="bankaccount.html">Bank account/a></li>
+      <li><a href="bankaccount.html">Bank account</a></li>
     </ul>
   </body>
   <a href="http://validator.w3.org/check/referer">
