--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <li><a href="/tasklist.html">Task list</a></li>
       <li><a href="/Decorated/decoratemytext.html">Decorate my text</a></li>
       <li><a href="bankaccount.html">Bank account</a></li>
+      <li><a href="ASCIIanimation/ascii.html">ASCIIanimation</a></li>
     </ul>
   </body>
   <a href="http://validator.w3.org/check/referer">
