--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       <li><a href="/Decorated/decoratemytext.html">Decorate my text</a></li>
       <li><a href="bankaccount.html">Bank account</a></li>
       <li><a href="ASCIIanimation/ascii.html">ASCIIanimation</a></li>
+      <li><a href="Maze/maze.html">Mouse maze</a></li>
     </ul>
   </body>
   <a href="http://validator.w3.org/check/referer">
