--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       <li><a href="bankaccount.html">Bank account</a></li>
       <li><a href="ASCIIanimation/ascii.html">ASCIIanimation</a></li>
       <li><a href="Maze/maze.html">Mouse maze</a></li>
+      <li><a href="puzzle/fifteen.html">Puzzle</a></li>
     </ul>
   </body>
   <a href="http://validator.w3.org/check/referer">
