--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <li><a href="ASCIIanimation/ascii.html">ASCIIanimation</a></li>
       <li><a href="Maze/maze.html">Mouse maze</a></li>
       <li><a href="puzzle/fifteen.html">Puzzle</a></li>
+      <li><a href="AstronomyPicture_AJAX/astro.html">Astronomy Picture AJAX</a></li>
     </ul>
   </body>
   <a href="http://validator.w3.org/check/referer">
