--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       <li><a href="Maze/maze.html">Mouse maze</a></li>
       <li><a href="puzzle/fifteen.html">Puzzle</a></li>
       <li><a href="AstronomyPicture_AJAX/astro.html">Astronomy Picture AJAX</a></li>
+      <li><a href="AstronomyPicture_Fetch/astro.html">Astronomy Picture Fetch</a></li>
     </ul>
   </body>
   <a href="http://validator.w3.org/check/referer">
